Working on some different options for the flipcards to avoid overlap

--- a/b-site/css/styles2.css
+++ b/b-site/css/styles2.css
@@ -310,6 +310,7 @@ i {
 
 /* PROFILES PAGE */
 
+
 #profile-page {
 	background: #FAFAD2;
 }
@@ -318,50 +319,38 @@ i {
 	text-align: center;
 }
 
-#profile-cards img {
-	margin: 20px auto;
+#profile-cards .row {
+	position: relative;
 }
 
-.info-card {
-	-webkit-perspective: 600px;
-    perspective: 600px;
-    margin 20px;
+#profile-cards img {
+	margin: 20px auto;
+    border-radius: 10px;
+}
+
+#profile-cards h2 {
+	font-size: 3em;
+    text-align: center;
 }
 
 .front, .back {
-    -webkit-transition: -webkit-transform 1s;
-    transition: -webkit-transform 1s;
-    transition: transform 1s;
-    transition: transform 1s, -webkit-transform 1s;
+    transition: 1s;
+}
+
+.hider {
+    display: none;
+    opacity: 0;
+    -webkit-transition: 3s;
+    transition: 3s;
+    -webkit-transform: rotateY(-180px);
+    transform: rotateY(-180px);
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
 }
 
-.front {
-	width: 100%;
-    height: auto;
-    position: absolute;
-    display: block;
-}
 
-.back {
-	transform: rotateY(-180deg);
-    padding: 0 30px;
-}
 
-.back p {
-    text-align: left;
-}
 
-.info-card:hover .back {
-	transform: rotateY(0);
-}
-
-.info-card:hover .front {
-	transform: rotateY(180deg);
-}
 
 
 
